...

    <string name="beta" translatable="false" comment="Used to inform the user in Developer Settings of the ContentServerType">Beta</string>
    <string name="bookmark">Bookmark</string>

    <string name="cancel">Cancel</string>
    <string name="cancel_all">Cancel All</string>
    <string name="content">Content</string>
    <string name="copy">Copy</string>

    <string name="delete">Delete</string>
    <string name="define">Define</string>
    <string name="dev" translatable="false" comment="Used to inform the user in Developer Settings of the ContentServerType">Development</string>
    <string name="display">Display</string>
    <string name="done">Done</string>
    <string name="download">Download</string>
    <string name="download_all">Download All</string>
    <string name="download_item">Download Item</string>

    <string name="edit_note">Edit Note</string>

...
    <string name="rename">Rename</string>

    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="screen_settings">Screen Settings</string>
    <string name="share">Share</string>
    <string name="skip">Skip</string>
    <string name="sort">Sort</string>
    <string name="staging" translatable="false" comment="Used to inform the user in Developer Settings of the ContentServerType">Staging</string>
    <string name="template" translatable="false" comment="Used to inform the user in Developer Settings of the ContentServerType">Template</string>

    <string name="tag">Tag</string>
    <string name="tags">Tags</string>
...
    <string name="language">Language</string>
    <string name="lds_account_summary">An LDS Account is used to back up and synchronize your annotations across devices and on LDS.org.</string>
    <string name="link_to" comment="subtitle for link to Activity... continues sentence for select_text_to_link">to %1$s</string>
    <string name="loading_ellipsis">Loading…</string>

    <string name="male" comment="Option for using a male voice for audio playback">Male</string>
    <string name="mark" comment="Select highlight color">Mark</string>
    <string name="media_type">Media type</string>
    <string name="menu_new_screen">New Screen…</string>
    <string name="merged_notebook_name_prompt">The selected notebooks will be merged. Please enter a name for the resulting notebook.</string>
    <string name="merged_notebook_name">Merged Notebook Name</string>
    <string name="merged_tag_name">Merged Tag Name</string>
    <string name="move_to_notebook">Move to Notebook</string>
...
    <string name="no_related_content">No Related Content</string>
    <string name="no_related_content_description2">No footnotes, personal notes, or other related content available.</string>
    <string name="no_tags" comment="The message to show when there are no tags">No Tags</string>
    <string name="no_tags_description">Create a tag to group content from anywhere in the app.</string>
    <string name="no_tagged_content" comment="The message to show when there are no tags">No Tagged Content</string>
    <string name="no_tagged_content_description">Attach a tag to any piece of content for future reference.</string>
    <string name="no_thanks">No Thanks</string>
    <string name="no_tips">No Tips</string>
    <string name="no_tips_description">Tips show you useful app functionality.</string>
    <string name="note_content">Note Content</string>
    <string name="notebook">Notebook</string>
    <string name="notebooks">Notebooks</string>
    <string name="notes">Notes</string>
...
    <string name="sort_by_count" comment="Sort items by their count">Sort by Count</string>
    <string name="sort_by_most_recent" comment="Sort items with the most recent at the top">Sort by Most Recent</string>
    <string name="sort_by_name" comment="sort items by their name">Sort by Name</string>
    <string name="sort_by_size" comment="sort media items">Sort by Size</string>
    <string name="sort_by_item" comment="sort media items">Sort by Item</string>
    <string name="splash_version" comment="Information about Gospel Library - app version">Version %s</string>
    <string name="style">Style</string>
    <string name="sync_error_invalid_credentials">Invalid Username/Password</string>
    <string name="sync_error_no_network">Network connection not available.</string>
    <string name="sync_notification_failure">Sync Failed</string>
    <string name="sync_notification_gathering_changes">Gathering Changes</string>
    <string name="sync_notification_processing_changes">Processing Changes</string>
    <string name="sync_notification_receiving_changes">Receiving Changes</string>
...
