<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/themeStyleColorListBackground"
                android:orientation="vertical">

    <org.lds.mobile.ui.widget.toolbar.ToolbarExpandLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/mainToolbar">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:scrollbars="vertical"/>

                <com.devbrackets.android.recyclerext.widget.FastScroll
                    android:id="@+id/fastScroll"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:visibility="gone"
                    app:re_bubble_color="?attr/colorAccent"
                    app:re_handle_color="?attr/colorAccent"
                    app:re_show_bubble="false"
                    tools:visibility="visible"/>
            </RelativeLayout>
        </android.support.v4.widget.SwipeRefreshLayout>
    </org.lds.mobile.ui.widget.toolbar.ToolbarExpandLayout>

    <include
        android:id="@+id/mainToolbar"
        layout="@layout/toolbar_actionbar"/>

    <include layout="@layout/toolbar_expanded"/>
</RelativeLayout>