<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popupLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="12dp"
    android:paddingEnd="8dp"
    android:paddingStart="8dp"
...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/markHighlightMenuTextView"
            style="@style/HighlightMenuItem"
            android:text="@string/mark"
            tools:drawableTop="@drawable/ic_lds_annotation_mark_24dp"/>

        <TextView
            android:id="@+id/noteHighlightMenuTextView"
...
