<?xml version="1.0" encoding="utf-8"?>
<org.lds.ldssa.ui.web.ContentWebView
    android:id="@+id/contentWebView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:scrollbarStyle="insideOverlay"
    xmlns:app="http://schemas.android.com/apk/res-auto">
...
